# fastapi-observability-example

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pr.yaml
src/app/: constants.py  main.py  utils.py
